# PerPackageTargetIssue

./: Cargo.toml  README.md
.Cargo/: config.toml
withlinker/: Cargo.toml
withlinker/src/: main.rs
withoutlinker/: Cargo.toml
