cargo-features = ["per-package-target"]

[package]
name = "withlinker"
version = "0.1.0"
edition = "2018"
forced-target = "thumbv7em-none-eabihf"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.2"
cortex-m-rt = "0.6.13"